# zkBuddy

./: Cargo.toml  README.md  circuit.txt  main.py  pyproject.toml  witness.txt  witness_solver.txt
src/: lib.rs
